--- a/src/components/content/content_snippets/Content_snippets.scss
+++ b/src/components/content/content_snippets/Content_snippets.scss
@@ -1,5 +1,19 @@
-.contentSnippets{
+.contentSnippets {
     width: 100%;
     height: 100%;
-    background: rgb(224, 224, 224)
+    background: rgb(224, 224, 224);
+    display: flex;
+    flex-direction: row;
+
+    .menu_snippets {
+        border: 1px solid black;
+    }
+
+    .snippets {
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
