--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,23 +1,37 @@
 .header {
     height: 50px;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
     box-shadow: 0px 5px 10px rgb(90, 90, 90);
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .button_div {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    position: relative;
     width: 250px;
-    height: 100%;
+    height: 30px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: blue;
+
     text-decoration: none;
 }
 
-.button_div:hover {
-    text-decoration: underline;
+.button_div:before {
+    content: '';
+    position: absolute;
+    bottom: -5px;
+    width: 0%;
+    height: 2.5px;
+    background-color: rgb(0, 0, 0);
+}
+
+.button_div:hover::before {
+    transition: width 0.35s;
+    width: 100%;
 }
 
 .button_div>button {
@@ -30,13 +44,26 @@
     text-shadow: rgb(0, 0, 0) 1px 0 10px;
 }
 
+
 .button_div-active {
+    font-size: 25px;
+    color: rgb(0, 0, 0);
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 250px;
-    height: 100%;
+    height: 30px;
     cursor: default;
-    color: rgb(23, 23, 112);
-    text-decoration: underline;
+    text-decoration: none;
+}
+
+.button_div-active:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -5px;
+    width: 100%;
+    height: 2.5px;
+    background-color: rgb(0, 0, 0);
 }
